Make sure overflowing content is shown

--- a/app/styles/pages/dashboard.less
+++ b/app/styles/pages/dashboard.less
@@ -215,7 +215,9 @@
 
 
 .page-dashboard {
+  background: #efefef;
   padding: 0;
+  
   // ==== dashboard header
   .dash-head {
     position: fixed;
