--- a/app/styles/sections/layout.less
+++ b/app/styles/sections/layout.less
@@ -22,10 +22,10 @@
 
 .main-container {
 	width: 100%;
-	overflow: hidden;
+	overflow: visible;
 	// min-height: 99.92%;
 	position:relative;
-	background: #efefef;
+	background: #fff;
 }
 
 .main-container .content-container.fixedHeader {
