--- a/app/styles/ui/scaffolding.less
+++ b/app/styles/ui/scaffolding.less
@@ -6,8 +6,8 @@ html, body {
 
 body {
 	letter-spacing: .5px;
-    background: #efefef;
-    // background: #fff;
+    //background: #efefef;
+    background: #fff;
 }
 
 *:focus {
